Fix footer build info line wrapping on small screens

--- a/src/style.scss
+++ b/src/style.scss
@@ -400,7 +400,8 @@ main {
 	color: rgb(255 255 255 / 82%);
 	margin: 0;
 	text-align: left;
-	white-space: nowrap;
+	white-space: normal;
+	overflow-wrap: anywhere;
 }
 
 @media (width >= 768px) {
